# caveman

./: .gitignore  README.md  pyproject.toml  sample_prompt.md
.github/workflows/: build.yml
src/cli/: main.py
src/core/: pipeline.py  rules.py  tokenizer.py
src/rules/: default.toml
