[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caveman-prompt"
version = "0.1.0"
description = "Compress LLM instruction files by removing bloat"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.7"]

[project.scripts]
caveman = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli*", "core*", "rules*"]

[tool.setuptools.package-data]
"rules" = ["*.toml"]
